src/test/deca/syntax/valid/test_readFloat.deca
// Description:
//    utilisation de readFloat().
//
// Resultats:
//    je sais pas
//
// Historique:
//    crée le 11/01/2022

{

	readFloat();
}